--- a/src/pagesCss/PostProperty.css
+++ b/src/pagesCss/PostProperty.css
@@ -1,4 +1,7 @@
-
+.form-control:focus {
+  border-color: transparent;
+  box-shadow: none;
+}
 
    h5 {
     font-weight: bold;
@@ -111,6 +114,7 @@
   
   /* CSS to make the headings non-clickable and remove hover background */
 .dropdown-heading {
+  
   font-weight: bold;
   background-color: #e5eaec;
   color: #000;
@@ -120,6 +124,15 @@
 .dropdown-heading:hover {
   background-color: #fff !important;
 }
+
+
+
+.custom-select-dropdown option {
+  font-size: 12px; /* Adjust font size for dropdown options */
+  
+}
+
+
 
 
 /* Tooltip styling for mobile */
@@ -136,6 +149,7 @@
   height: auto;
   background-color: #fff;
   border: 1px solid;
+  font-size: 12.5px;
   color: #000;
   text-align: left;
   border-radius: 5px;
@@ -143,7 +157,7 @@
   position: absolute;
   z-index: 1;
   left: 600%;
-  bottom: -340%;
+  bottom: -240%;
   margin-left: -100px;
   opacity: 0;
   transition: opacity 0.3s;
@@ -154,9 +168,13 @@
   visibility: visible;
   opacity: 1;
 }
-select {
-  font-size: 15px !important;
+
+.form-control{
+  
+    font-size: 0.8rem;
+    
 }
+
 
 
 @media (max-Width:768px){
