--- a/src/App.css
+++ b/src/App.css
@@ -13,8 +13,14 @@ body {
 }
 
 .footer {
+  /* position: absolute; */
   background-color: #f8f9fa;
-  padding: 40px 0;
+  padding: 20px 0 0;
+  
+}
+.container{
+  width: 100%;
+  max-width: 2560px;
 }
 
 .footer h5 {
@@ -81,9 +87,71 @@ body {
 
 .social-icons a {
   margin-right: 5px !important; /* Add space between icons */
-  margin-left: 3.6rem !important;
+  margin-left: 3rem !important;
 }
 
 .social-icons a:last-child {
   margin-right: 0px !important; /* Remove right margin from the last icon */
+}
+.footer-links-container {
+  background-color: #f5f5f5;
+  padding: 10px 0;
+  text-align: center;
+}
+
+.footer-link {
+  color: #333;
+  font-weight: 300;
+  font-size: 14.5px !important;
+  text-decoration: none;
+  padding-left: 25px !important;
+  position: relative; /* Required for the shine effect */
+  overflow: hidden;
+}
+
+.footer-link:hover {
+  color: #F7A537;
+  text-decoration: none !important;
+}
+
+.footer-link:hover::before {
+  left: 10%;
+}
+
+.footer-link:hover {
+  color: red;
+  text-decoration: none !important;
+  transition: color 0.2s ease-in-out;
+}
+
+/*Manage Property*/
+
+.manage{
+  margin: 40px;
+}
+
+@media (max-width: 1078px){
+  .footer-link {
+    font-size: 12.4px !important;  
+    padding-left: 0px !important ;
+
+  }
+}
+@media (max-width:450px){
+  .policie{
+    justify-content: space-between;
+  }
+  .footer-link {
+    display: block;
+    margin: 5px 0; /* Ensure proper spacing on mobile */
+    font-size: 14px !important;
+
+  }
+}
+
+@media (max-width:550px){
+  .manage{
+    margin: 10px !important;
+  }
+ 
 }
