--- a/src/componetsCss/UserLayout.css
+++ b/src/componetsCss/UserLayout.css
@@ -23,35 +23,48 @@
   
   .user-name {
     margin-right: 5px;
+    font-size: 15px;
   }
   
-  .dropdown-arrow {
-    font-size: 10px;
-  }
-  
-  .user-dropdown {
-    display: none;
-    position: absolute;
-    top: 35px;
-    right: -50px;
-    background-color: white;
-    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.1);
-    border-radius: 5px;
-    z-index: 1;
-  }
-  
-  .user-layout:hover .user-dropdown {
-    display: block;
-  }
-  
-  .dropdown-item {
-    padding: 10px 20px;
-    display: block;
-    color: #333;
-    text-decoration: none;
-  }
-  
-  .dropdown-item:hover {
-    background-color: #f0f0f0;
-  }
-  
+.dropdwn-arrow {
+  margin-left: 10px;
+  border: solid black;
+  border-width: 0 2px 2px 0;
+  display: inline-block;
+  padding: 3px;
+  transform: rotate(45deg);
+  transition: transform 0.2s ease-in-out;
+}
+
+.dropdwn-arrow.open {
+  transform: rotate(-135deg);
+}
+
+.user-dropdwn {
+  position: absolute;
+  top: 58px;
+  right: -35px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  width: 200px;
+  z-index: 100;
+}
+
+.dropdwn-item {
+  padding: 10px 20px;
+  display: block;
+  color: #333;
+  text-decoration: none;
+  font-size: 14px;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.dropdwn-item:hover {
+  background-color: #f1f1f1;
+}
+
+.dropdwn-item:last-child {
+  color: red;
+}
