--- a/src/pagesCss/PostProperty.css
+++ b/src/pagesCss/PostProperty.css
@@ -1,3 +1,8 @@
+.post-container{
+  margin: 40px !important  ;
+}
+
+
 .form-control:focus {
   border-color: transparent;
   box-shadow: none;
@@ -174,10 +179,13 @@
     font-size: 0.8rem;
     
 }
+.possession-options {
+  display: inline-flex; /* Keeps radio buttons inline */
+}
 
 
 
-@media (max-Width:768px){
+@media (max-Width:550px){
   .tooltip-text {
     max-width: 170px;
     height: auto;
@@ -193,7 +201,8 @@
 /* Adjust dropdown width */
 .form-control {
   width: 100%;
-  max-width: 100%;
+  /* max-width: 100%; */
+  font-size: 10.4px !important;
 }
 
 /* Dropdown options */
@@ -207,4 +216,20 @@ select {
   overflow-y: auto; /* Add scroll if the dropdown is too long */
   max-height: 300px; /* Control max height */
 }
+.post-container{
+  margin: 20px !important  ;
+}
+h6 {
+  font-size: 0.9rem !important;
+}
+
+.possession-options {
+  display: flex;
+  flex-direction: row; 
+}
+
+.possession-options .form-check {
+  margin-left: 0; 
+}
+
 }
