--- a/src/propertysection/PropertyCard.css
+++ b/src/propertysection/PropertyCard.css
@@ -148,6 +148,7 @@
   .property-cards:hover {
     transform: scale(1.02);
     transition: transform 0.3s ease-in-out;
+    cursor: pointer;
   }
   
   /* Image styling for a rectangle image */
@@ -155,6 +156,7 @@
     height: 100%;
     width: 100%;
     object-fit: cover;
+    border-radius: 0px !important;
   }
   
   .price {
