--- a/src/propertypage/PropertyDetails.css
+++ b/src/propertypage/PropertyDetails.css
@@ -25,7 +25,7 @@
 .property-image {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: cover !important;
   border-radius: 10px !important;
 }
 
@@ -36,17 +36,45 @@
 }
 
 .more-images {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: rgba(0, 0, 0, 0.7);
-  color: white;
-  font-size: 1.2em;
   cursor: pointer;
-  text-align: center;
-  padding: 10px;
-  border-radius: 10px !important;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.2em;
+  height: 150px; /* Same as image height */
+  position: relative;
 }
+.more-images-overlay {
+  position: relative;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  color: white;
+  font-size: 1.5em;
+  font-weight: bold;
+}
+.overlay-text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Dark overlay that covers the entire image */
+  color: white;
+  display: flex;
+  justify-content: center; 
+  align-items: center; 
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+
 
 .property-info {
   width: 40%; /* Adjust size as needed */
@@ -169,7 +197,7 @@ button.btn-danger:hover {
   }
 
   .property-info {
-    margin-top: 20px; /* Add some spacing on mobile */
+    margin-top: 20px; 
   }
   .more-details{
     
@@ -177,20 +205,22 @@ button.btn-danger:hover {
   }
 
   .property-image:first-child {
-    grid-column: span 2; /* Keep the first image spanning 2 columns */
-    grid-row: span 2; /* Keep the first image spanning 2 rows */
-    height: auto; /* Adjust height based on content */
+    grid-column: span 2; 
+    grid-row: span 2; 
   }
   .horizontal-line {
-    height: 1px; /* Height of horizontal line */
-    width: 100%; /* Full width */
-    background-color: #ccc; /* Color of the horizontal line */
+    height: 1px; 
+    width: 100%;
+    background-color: #ccc; 
+  }
+  .overlay-text {
+    font-size: 14px;
   }
 }
 
 @media (max-width: 480px) {
   .image-grid {
-    grid-template-columns: repeat(3, 1fr); /* Maintain 3 columns even on small screens */
+    grid-template-columns: repeat(3, 1fr); 
   }
 
   .property-info {
